--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -145,25 +145,6 @@ nav:
                 - Overview: api-design-manage/design/api-policies/overview.md
                 - Attach Policy: api-design-manage/design/api-policies/attach-policy.md
                 - Create Policy: api-design-manage/design/api-policies/create-policy.md
-            - API Security:
-                - Authentication:
-                    - Overview: api-design-manage/design/api-security/api-authentication/api-authentication-overview.md
-                    - Disable Security: api-design-manage/design/api-security/api-authentication/disable-security.md
-                    - Secure APIs Using API Keys: api-design-manage/design/api-security/api-authentication/secure-apis-using-api-keys.md
-                    - Secure APIs Using Basic Authentication: api-design-manage/design/api-security/api-authentication/secure-apis-using-basic-authentication.md
-                    - Secure APIs Using Mutual SSL: api-design-manage/design/api-security/api-authentication/secure-apis-using-mutual-ssl.md
-                    - Secure APIs Using OAuth2 Tokens: api-design-manage/design/api-security/api-authentication/secure-apis-using-oauth2-tokens.md
-                    - Securing APIs Using Certificate Bound Access Tokens: api-design-manage/design/api-security/api-authentication/securing-apis-using-certificate-bound-access-tokens.md
-                - Authorization:
-                    - Overview: api-design-manage/design/api-security/authorization/api-authorization.md
-                    - Role-based Access Control Using XACML: api-design-manage/design/api-security/authorization/role-based-access-control-using-xacml.md
-                    - Fine Grained Access Control with OAuth Scopes: api-design-manage/design/api-security/oauth2/oauth2-scopes/fine-grained-access-control-with-oauth-scopes.md
-                - Configuring API Security Audit: api-design-manage/design/api-security/configuring-api-security-audit.md
-                - API Request Response Schema Validation:
-                    - JSON Schema Validator: api-design-manage/design/api-security/api-request-response-schema-validation/json-schema-validator.md
-                - OPA Validation:
-                    - Overview: api-design-manage/design/api-security/opa-validation/overview.md
-                    - Custom OPA Policy for Regular Gateway: api-design-manage/design/api-security/opa-validation/custom-opa-policy-for-regular-gateway.md
             - Rate Limiting:
                 - Throttling Use-Cases: api-design-manage/design/rate-limiting/introducing-throttling-use-cases.md
                 - Setting Throttling Limits: api-design-manage/design/rate-limiting/setting-throttling-limits.md
@@ -245,6 +226,26 @@ nav:
             - Setup WSO2 Identity Server as a Federated Authenticator: api-developer-portal/b2b-api-consumption/setup-identity-server.md
 
     - API Security:
+        - Design-Time Security:
+            - Configuring API Security Audit: api-security/design-time/configuring-api-security-audit.md
+        - Runtime Security:
+            - Authentication:
+                - Overview: api-security/runtime/api-authentication/api-authentication-overview.md
+                - Disable Security: api-security/runtime/api-authentication/disable-security.md
+                - Secure APIs Using API Keys: api-security/runtime/api-authentication/secure-apis-using-api-keys.md
+                - Secure APIs Using Basic Authentication: api-security/runtime/api-authentication/secure-apis-using-basic-authentication.md
+                - Secure APIs Using Mutual SSL: api-security/runtime/api-authentication/secure-apis-using-mutual-ssl.md
+                - Secure APIs Using OAuth2 Tokens: api-security/runtime/api-authentication/secure-apis-using-oauth2-tokens.md
+                - Securing APIs Using Certificate Bound Access Tokens: api-design-manage/design/api-security/api-authentication/securing-apis-using-certificate-bound-access-tokens.md
+            - Authorization:
+                - Overview: api-security/runtime/authorization/api-authorization.md
+                - Role-based Access Control Using XACML: api-security/runtime/authorization/role-based-access-control-using-xacml.md
+                - Fine Grained Access Control with OAuth Scopes: api-security/runtime/oauth2/oauth2-scopes/fine-grained-access-control-with-oauth-scopes.md
+            - API Request Response Schema Validation:
+                - JSON Schema Validator: api-security/runtime/api-request-response-schema-validation/json-schema-validator.md
+            - OPA Validation:
+                - Overview: api-security/runtime/opa-validation/overview.md
+                - Custom OPA Policy for Regular Gateway: api-security/runtime/opa-validation/custom-opa-policy-for-regular-gateway.md
         - Key Management:
             - Overview: key-manager/key-manager-overview.md
             - Authentication & Authorization:
@@ -1360,7 +1361,7 @@ extra:
     - title: API Analytics & Monetization
       options:
         - verticle-line-only
-    - title: Key Manager
+    - title: API Security
       options:
         - verticle-line-only
     - title: Admin Portal
