--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -144,12 +144,13 @@ nav:
                 - Attach Policy: api-design-manage/design/api-policies/attach-policy.md
                 - Create Policy: api-design-manage/design/api-policies/create-policy.md
             - Rate Limiting:
-                - Throttling Use-Cases: api-design-manage/design/rate-limiting/introducing-throttling-use-cases.md
-                - Setting Throttling Limits: api-design-manage/design/rate-limiting/setting-throttling-limits.md
-                - Access Control: api-design-manage/design/rate-limiting/access-control.md
-                - GraphQL API:
-                    - Query Complexity Analysis: api-design-manage/design/rate-limiting/graphql-api/query-complexity-analysis.md
-                    - Query Depth Analysis: api-design-manage/design/rate-limiting/graphql-api/query-depth-analysis.md
+                - Set API Operation Limits: api-design-manage/design/rate-limiting/set-api-level-throttling.md
+                - Protect Backend Services: api-design-manage/design/rate-limiting/protect-backend-services.md
+                - Assign Business Plans: api-design-manage/design/rate-limiting/assign-business-plans.md
+                - Set GraphQL Query Limits:
+                    - Limit Query Complexity: api-design-manage/design/rate-limiting/graphql-api/query-complexity-analysis.md
+                    - Limit Query Depth: api-design-manage/design/rate-limiting/graphql-api/query-depth-analysis.md
+                - Set Streaming API Limits: api-design-manage/design/rate-limiting/set-streaming-api-limits.md
             - Advanced Topics:
                 - Enable Publisher Access Control: api-design-manage/design/advanced-topics/enable-publisher-access-control-in-api-publisher-portal.md
                 - Control API Visibility and Subscription Availability: api-design-manage/design/advanced-topics/control-api-visibility-and-subscription-availability-in-developer-portal.md
@@ -218,7 +219,10 @@ nav:
             - Recover Password: api-developer-portal/user-account-management/recover-password.md
             - Change Password: api-developer-portal/user-account-management/change-dev-portal-password.md
         - Rate Limiting:
-            - Resetting Application Throttling Policies: api-developer-portal/rate-limiting/resetting-application-throttling-policies.md
+            - Rate Limiting for App Developers: api-developer-portal/rate-limiting/rate-limiting-for-app-developers.md
+            - Manage Application Rate Limits: api-developer-portal/rate-limiting/manage-application-rate-limits.md
+            - Handle Rate Limiting Errors: api-developer-portal/rate-limiting/handle-rate-limiting-errors.md
+            - Reset Application Throttling Policies: api-developer-portal/rate-limiting/resetting-application-throttling-policies.md
         - B2B API Consumption:
             - B2B API Consumption: api-developer-portal/b2b-api-consumption/api-consumption.md
             - Setup WSO2 Identity Server as a Federated Authenticator: api-developer-portal/b2b-api-consumption/setup-identity-server.md
@@ -317,13 +321,16 @@ nav:
                 - XML Threat Protection: api-gateway/threat-protectors/xml-threat-protection-for-api-gateway.md
                 - Bot Detection: api-gateway/threat-protectors/bot-detection.md
             - Rate Limiting:
-                - Enforce Throttling and Resource Access Policies: api-gateway/rate-limiting/enforce-throttling-and-resource-access-policies.md
-                - Setting Maximum Backend Throughput Limits: api-gateway/rate-limiting/setting-maximum-backend-throughput-limits.md
-                - Rate Limiting for AI APIs: api-gateway/rate-limiting/rate-limiting-for-ai-apis.md
-                - Rate Limiting for Streaming APIs: api-gateway/rate-limiting/rate-limiting-for-streaming-apis.md
-                - Advanced Topics:
-                    - Distributed Burst Control for API Gateway Cluster: api-gateway/rate-limiting/configuring-rate-limiting-api-gateway-cluster.md
-                    - Distributed Throttling: api-gateway/rate-limiting/distributed-throttling.md
+                - Enforcement Logic & Hierarchy:
+                    - Priority Chain: api-design-manage/design/rate-limiting/enforce-throttling-and-resource-access-policies.md
+                    - GraphQL Enforcement: api-design-manage/design/rate-limiting/graphql-api/query-complexity-analysiss.md
+                    - Streaming Enforcement: api-design-manage/design/rate-limiting/rate-limiting-for-streaming-apis.md
+                - Configuring Distributed Throttling:
+                    - Architecture Overview: api-gateway/rate-limiting/distributed-throttling.md
+                    - Connecting to Redis/Valkey: api-gateway/rate-limiting/configuring-rate-limiting-api-gateway-cluster.md
+                - Advanced Runtime Configurations:
+                    - Distributed Burst Control: api-gateway/rate-limiting/configuring-rate-limiting-api-gateway-cluster.md
+                    - Cluster-Wide Backend Limiting: api-design-manage/design/rate-limiting/setting-maximum-backend-throughput-limits.md
                     - Custom Throttling: api-gateway/rate-limiting/custom-throttling.md
         - Federated Gateways:
               - Overview: api-gateway/federated-gateways/overview.md
@@ -347,7 +354,14 @@ nav:
         - LLM Gateway:
             - Getting Started: ai-gateway/getting-started-with-ai-gateway.md
             - AI Backend Security: ai-gateway/ai-backend-security.md
-            - Rate Limiting: ai-gateway/rate-limiting.md
+            - Rate Limiting:
+                - LLM Rate Limiting Fundamentals:
+                    - Overview: ai-gateway/rate-limiting.md
+                    - Requests vs Tokens per Minute: ai-gateway/rate-limiting.md
+                    - Prompt vs Completion Tokens: ai-gateway/rate-limiting.md
+                - Enforcing Egress Limits:
+                    - Controlling LLM Provider Costs: api-design-manage/design/rate-limiting/rate-limiting-for-ai-apis.md
+                    - Rate Limiting for AI APIs: api-design-manage/design/rate-limiting/rate-limiting-for-ai-apis.md
             - Multi-Model Routing:
                 - Overview: ai-gateway/multi-model-routing/overview.md
                 - Load Balancing: ai-gateway/multi-model-routing/load-balancing.md
@@ -455,7 +469,19 @@ nav:
         - Advanced Configurations: administer/advanced-configurations.md
         - Manage Role based access control for the Admin portal: administer/role-based-access-control.md
         - Rate Limiting:
-            - Adding New Throttling Policies: api-design-manage/design/rate-limiting/adding-new-throttling-policies.md
+            - Managing Subscription Policies (Business Plans):
+                - Creating REST Subscription Policies: api-design-manage/design/rate-limiting/adding-new-throttling-policies.md
+                - Defining AI Subscription Policies: api-design-manage/design/rate-limiting/rate-limiting-for-ai-apis.md
+                - Defining GraphQL Subscription Limits: api-design-manage/design/rate-limiting/graphql-api/query-complexity-analysiss.md
+                - Defining Streaming Subscription Limits: api-design-manage/design/rate-limiting/rate-limiting-for-streaming-apis.md
+            - Managing Application Policies:
+                - Defining Per-Application Limits: api-design-manage/design/rate-limiting/adding-new-throttling-policies.md
+            - Managing Advanced Policies:
+                - Defining Technical Limits: api-design-manage/design/rate-limiting/adding-new-throttling-policies.md
+            - Managing Deny Policies (Blocklisting):
+                - Blocking Requests: api-design-manage/design/rate-limiting/access-control.md
+            - Managing Custom Policies:
+                - Writing Siddhi Queries: api-gateway/rate-limiting/custom-throttling.md
         - Governance:
             - Overview: administer/governance/overview.md
             - Concepts: administer/governance/governance-concept.md
