--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -18,12 +18,12 @@
 site_name: WSO2 API Manager Documentation
 site_description: Documentation for WSO2 API Manager
 site_author: WSO2
-site_url: https://dushaniw.github.io/docs-apim/
+site_url: https://apim.docs.wso2.com/en/latest/
 
 # Repository
 repo_name: wso2/docs-apim
 repo_url: https://github.com/wso2/docs-apim
-edit_uri: https://github.com/wso2/docs-apim/edit/4.6.0-revamp/en/docs/
+edit_uri: https://github.com/wso2/docs-apim/edit/revamp-4.6.0/en/docs/
 dev_addr: localhost:8000
 
 # Copyright
@@ -1463,8 +1463,8 @@ extra:
             version: 1.2.0-1
             git_tag: v1.2.0.1
     site_version: 4.6.0
-    base_path: https://dushaniw.github.io/docs-apim
-    #base_path: http://localhost:8000/docs-apim
+    # base_path: http://localhost:8000/en/latest
+    base_path: https://apim.docs.wso2.com/en/latest
     envoy_path: https://www.envoyproxy.io/docs/envoy/v1.24.1
     redoc_theme: '{
         "colors": {
