add nav order and change title css | add remaining redirects

--- a/en/redirects.yml
+++ b/en/redirects.yml
@@ -399,8 +399,8 @@
 'administer/key-managers/configure-pingfederate-connector.md': '{{SITE_URL}}/key-manager/third-party-key-managers/configure-pingfederate-connector/'
 'administer/key-managers/configure-wso2is-connector.md': '{{SITE_URL}}/key-manager/third-party-key-managers/configure-wso2is-connector/'
 'administer/key-managers/configure-wso2is7-connector.md': '{{SITE_URL}}/key-manager/third-party-key-managers/configure-wso2is7-connector/'
-'administer/key-managers/overview.md': '{{SITE_URL}}/administer/governance/overview/'
-'ai-gateway/overview.md': '{{SITE_URL}}/ai-gateway/ai-guardrails/overview/'
+'administer/key-managers/overview.md': '{{SITE_URL}}/key-manager/third-party-key-managers/overview/'
+'ai-gateway/overview.md': '{{SITE_URL}}/ai-gateway/ai-gateway-overview/'
 'consume/collaboration/interact-with-the-community.md': '{{SITE_URL}}/api-developer-portal/collaboration/interact-with-the-community/'
 'consume/consume-api-overview.md': '{{SITE_URL}}/api-developer-portal/consume-api-overview/'
 'consume/discover-apis/marketplace-assistant.md': '{{SITE_URL}}/api-developer-portal/discover-apis/marketplace-assistant/'
@@ -576,3 +576,18 @@
 'manage-apis/design/rate-limiting/advanced-topics/configuring-rate-limiting-api-gateway-cluster.md': '{{SITE_URL}}/api-gateway/rate-limiting/configuring-rate-limiting-api-gateway-cluster/'
 'manage-apis/design/rate-limiting/advanced-topics/distributed-throttling.md': '{{SITE_URL}}/api-gateway/rate-limiting/distributed-throttling/'
 'manage-apis/design/rate-limiting/resetting-application-throttling-policies.md': '{{SITE_URL}}/api-developer-portal/rate-limiting/resetting-application-throttling-policies/'
+'install-and-setup/setup/deployment-overview.md': '{{SITE_URL}}/get-started/deployment-patterns/'
+'install-and-setup/setup/distributed-deployment/understanding-the-distributed-deployment-of-wso2-api-m.md': '{{SITE_URL}}/get-started/deployment-patterns/#pattern-3-recommended-distributed-deployment'
+'install-and-setup/setup/single-node/deployment-overview.md': '{{SITE_URL}}/get-started/deployment-patterns/'
+'manage-apis/design/rate-limiting/access-control.md' : '{{SITE_URL}}/administer/rate-limiting/manage-advanced-policies/#allowed-ips'
+'manage-apis/design/rate-limiting/adding-new-throttling-policies.md' : '{{SITE_URL}}/administer/rate-limiting/manage-subscription-policies/'
+'manage-apis/design/rate-limiting/advanced-topics/custom-throttling.md' : '{{SITE_URL}}/administer/rate-limiting/implement-custom-policies/'
+'manage-apis/design/rate-limiting/enforce-throttling-and-resource-access-policies.md' : '{{SITE_URL}}/tutorials/enforce-throttling-and-resource-access-policies/'
+'manage-apis/design/rate-limiting/graphql-api/overview-query-limits-for-graphql.md' : '{{SITE_URL}}/api-gateway/rate-limiting/enforce-graphql-query-limits/'
+'manage-apis/design/rate-limiting/graphql-api/query-complexity-limitation.md' : '{{SITE_URL}}/api-design-manage/design/rate-limiting/graphql-api/query-complexity-analysis/'
+'manage-apis/design/rate-limiting/graphql-api/query-depth-limitation.md' : '{{SITE_URL}}/api-design-manage/design/rate-limiting/graphql-api/query-depth-analysis/'
+'manage-apis/design/rate-limiting/introducing-throttling-use-cases.md' : '{{SITE_URL}}/api-gateway/rate-limiting/understand-rate-limit-enforcement/'
+'manage-apis/design/rate-limiting/rate-limiting-for-ai-apis.md' : '{{SITE_URL}}/ai-gateway/rate-limiting/'
+'manage-apis/design/rate-limiting/rate-limiting-for-streaming-apis.md' : '{{SITE_URL}}/api-gateway/rate-limiting/enforce-streaming-api-limits/'
+'manage-apis/design/rate-limiting/setting-maximum-backend-throughput-limits.md' : '{{SITE_URL}}/api-design-manage/design/rate-limiting/protect-backend-services/'
+'manage-apis/design/rate-limiting/setting-throttling-limits.md' : '{{SITE_URL}}/api-gateway/rate-limiting/understand-rate-limit-enforcement/'
