[4.4.0] Update moesif docs (#10388)
* Add Moesif Analytics Integration Guide and related assets

* Fix: Update Moesif Analytics architecture link to point to Choreo Analytics documentation

--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -314,6 +314,7 @@ nav:
             - Publish Integrations to the API Manager: integrate/develop/working-with-service-catalog.md
     - Analytics:
         - API Analytics:
+            - Moesif Analytics: api-analytics/moesif-analytics/moesif-integration-guide.md
             - Choreo Based Analytics: 
                 - Architecture: api-analytics/choreo-analytics/api-analytics-architecture.md
                 - Getting Started Guide: api-analytics/choreo-analytics/getting-started-guide.md
