--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -854,98 +854,30 @@ extra:
             url: Get started|Quick Start Guide
           - title: About This Release
             url: Get started|About this Release
+    design_and_manage_apis_cards:
     - section:
-      - title: Deployment Options
-        icon: octicons/server-16
-        icon_color: icon-color-4
-        list_items:
-          - title: Deploy on VM
-            url: Install and Setup|Install|Run API-M
-          - title: Deploy on Kubernetes
-            url: Install and Setup|Install|Deploy on Kubernetes
-          - title: SaaS
-            url: https://wso2.com/bijira/docs/
+      - title: API Design
+        description: The complete toolkit for API Creators. Design, document, mock, and apply policies for your REST, GraphQL, and AsyncAPI specifications.
+    discover_apis_cards:
     - section:
-      - title: Setup
-        icon: octicons/gear-16
-        icon_color: icon-color-3
-        list_items:
-          - title: Install
-            url: Install and Setup|Install|Install API-M
-          - title: Deploy
-            url: Install and Setup|Setup|Overview
-          - title: Upgrade WSO2 API Manager
-            url: Install and Setup|Upgrade
+      - title: API Developer Portal
+        description: The hub for Application Developers. Discover a catalog of available APIs, subscribe to your applications, and manage your API keys and credentials. 
+    run_apis_cards:
     - section:
-      - title: Developer Resources
-        icon: octicons/code-16
-        icon_color: icon-color-3
-        list_items:
-          - title: Product Rest APIs
-            url: Reference|Product REST APIs|Overview
-          - title: Tooling
-            url: Reference|API Controller (APICTL)
-          - title: SDKs
-            url: Consume APIs|Generating SDKs|Generate SDK in Developer Portal
-          - title: Configuration Catalog
-            url: Reference|Product|API-M Config Catalog
+      - title: API Gateway
+        description: Secure, manage, and scale your API traffic. Learn to deploy the runtime, enforce security policies, and manage deployments.
+        cta_items:
+          - cta_text: Universay Gateway Overview
+            url: api-gateway/overview-of-the-api-gateway/
+          - cta_text: Federated Gateways Overview
+            url: api-gateway/federated-gateways/overview/
     - section:
-      - title: Guides
-        icon: octicons/book-16
-        icon_color: icon-color-3
-        list_items:
-          - title: Designing APIs
-            url: Manage APIs|Design APIs Overview
-          - title: Create an API Product
-            url: Manage APIs|Design APIs|Create an API Product
-          - title: Authentication
-            url: Manage APIs|Design APIs|API Security|Authentication|Overview
-          - title: Authorization
-            url: Reference|Product|API-M Config Catalog
-    control_plain_cards:
-    - section:
-      - title: WSO2 API Control Plane
-        icon: octicons/gear-16
-        icon_color: icon-color-1
-        description: A Unified control plane which centrally manages and governs APIs across multiple Gateways
-        list_items:
-          - title: WSO2 API Control Plane Overview
-            url: Get Started|Architecture
-    data_plane_cards:
-    - section:
-      - title: WSO2 Universal Gateway
-        icon: octicons/tools-16
-        icon_color: icon-color-1
-        description: Secure and proxy API traffic with enterprise-grade features
-        list_items:
-          - title: WSO2 Universal Gateway Overview
-            url: API Gateway|Regular Gateway|Overview of the WSO2 Universal Gateway
-    - section:
-      - title: WSO2 Kubernetes Gateway
-        icon: octicons/link-external-16
-        icon_color: icon-color-1
-        description: Designed to build, deploy, and manage APIs in a cloud environment
-        list_items:
-          - title: WSO2 Kubernetes Gateway Overview
-            url: Install and Setup|Setup|Set up API Manager|Set up Kubernetes Gateway with APIM
-    - section:
-      - title: WSO2 Immutable Gateway
-        icon: octicons/mortar-board-16
-        icon_color: icon-color-1
-        description: An API Gateway for micro services, which is cloud-native, decentralized and developer centric
-        list_items:
-          - title: WSO2 Immutable Gateway Overview
-            url: get-started/apim-architecture/#immutable-gateway
-    - section:
-      - title: Federated Gateways
-        icon: octicons/mortar-board-16
-        icon_color: icon-color-1
-        description: Manage APIs spanning multiple cloud platforms, on-premises systems, or regions
-        list_items:
-          - title: AWS API Gateway
-            url: manage-apis/deploy-and-publish/federated-gateways/aws/deploy-on-aws-api-gateway/
-          - title: Solace Broker
-            url: tutorials/integrating-with-solace/
+      - title: AI Gateway
+        description: A specialized gateway to secure, monitor, and manage access to LLMs. Get started with MCP server and AI-specific policies.
+        cta_items:
+          - cta_text: AI Gateway Overview
+            url: ai-gateway/ai-gateway-overview/
+          
     expanded_navs:
     - title: Get Started
       options:
