[4.3.0] Add SnakeYAML dependency configuration and update security guidelines

--- a/en/tools/config-catalog-generator/data/configs.json
+++ b/en/tools/config-catalog-generator/data/configs.json
@@ -5759,6 +5759,27 @@
                 }
             ],
             "exampleFile": "service_provider.toml"
+        },
+        {
+            "title": "Dependency Configurations",
+            "options": [
+                {
+                    "name": "dependency_properties",
+                    "required": false,
+                    "description": "This includes configurations for dependency related properties.",
+                    "params": [
+                        {
+                            "name": "snakeyaml.max_file_size_limit",
+                            "type": "integer",
+                            "required": false,
+                            "default": "",
+                            "possible": "",
+                            "description": "This sets the maximum file size (in MB) for YAML files processed by SnakeYAML during API definition import/export operations. Overrides the default codepoint limit of 3,145,728 characters (~3MB) to support larger YAML OpenAPI files. The system calculates the actual codepoint limit using the formula: configured_value × 4 × 1024 × 1024 (e.g., 10 MB = 41,943,040 codepoints). Increasing this value may expose the system to DoS attacks via large malicious files - configure based on actual requirements and security policies. Note that this configuration is only available from update level 93 onwards."
+                        }
+                    ]
+                }
+            ],
+            "exampleFile": "dependency_properties.toml"
         }
     ]
 }
