Add redirections from the old url to new urls

--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -814,6 +814,57 @@ plugins:
               - wip/*
     - redirects:
           redirect_maps:
+              # Old design/create API paths to new manage-apis/design paths
+              'design/api-definitions/create-a-rest-api-from-an-openapi-definition.md': 'manage-apis/design/create-api/create-rest-api/create-a-rest-api-from-an-openapi-definition.md'
+              'design/create-api/create-rest-api/create-a-rest-api-from-an-openapi-definition.md': 'manage-apis/design/create-api/create-rest-api/create-a-rest-api-from-an-openapi-definition.md'
+              'design/create-api/create-a-rest-api.md': 'manage-apis/design/create-api/create-rest-api/create-a-rest-api.md'
+              'design/create-api/create-rest-api/create-a-rest-api.md': 'manage-apis/design/create-api/create-rest-api/create-a-rest-api.md'
+              'design/create-api/create-a-rest-api-from-an-openapi-definition.md': 'manage-apis/design/create-api/create-rest-api/create-a-rest-api-from-an-openapi-definition.md'
+              'design/create-api/expose-a-soap-service-as-a-rest-api.md': 'tutorials/expose-a-soap-service-as-a-rest-api.md'
+              'design/create-api/create-rest-api/expose-a-soap-service-as-a-rest-api.md': 'tutorials/expose-a-soap-service-as-a-rest-api.md'
+              'design/create-api/test-a-rest-api.md': 'manage-apis/design/create-api/create-rest-api/test-a-rest-api.md'
+              'design/create-api/create-rest-api/test-a-rest-api.md': 'manage-apis/design/create-api/create-rest-api/test-a-rest-api.md'
+              'design/create-api/create-a-graphql-api.md': 'manage-apis/design/create-api/create-a-graphql-api.md'
+              'design/create-api/create-a-websocket-api.md': 'manage-apis/design/create-api/create-streaming-api/create-a-websocket-streaming-api.md'
+              'design/create-api/create-streaming-api/create-a-websocket-streaming-api.md': 'manage-apis/design/create-api/create-streaming-api/create-a-websocket-streaming-api.md'
+              'design/create-api/create-a-websub-api.md': 'manage-apis/design/create-api/create-streaming-api/create-a-websub-streaming-api.md'
+              'design/create-api/create-streaming-api/create-a-websub-streaming-api.md': 'manage-apis/design/create-api/create-streaming-api/create-a-websub-streaming-api.md'
+              'design/create-api/create-a-sse-api.md': 'manage-apis/design/create-api/create-streaming-api/create-a-sse-streaming-api.md'
+              'design/create-api/create-streaming-api/create-a-sse-streaming-api.md': 'manage-apis/design/create-api/create-streaming-api/create-a-sse-streaming-api.md'
+              'design/create-api/create-a-streaming-api-from-an-asyncapi-definition.md': 'manage-apis/design/create-api/create-streaming-api/create-a-streaming-api-from-an-asyncapi-definition.md'
+              'design/create-api/create-streaming-api/create-a-streaming-api-from-an-asyncapi-definition.md': 'manage-apis/design/create-api/create-streaming-api/create-a-streaming-api-from-an-asyncapi-definition.md'
+              'design/create-api/adding-custom-properties-to-apis.md': 'manage-apis/design/create-api/adding-custom-properties-to-apis.md'
+              'design/create-api/change-api-thumbnail.md': 'manage-apis/design/create-api/change-api-thumbnail.md'
+              'design/create-api/create-api-revisions.md': 'manage-apis/design/create-api/create-api-revisions.md'
+              'design/create-api/create-an-api-using-a-service.md': 'manage-apis/design/create-api/create-an-api-using-a-service.md'
+              'design/prototype-api/overview.md': 'manage-apis/design/prototype-api/overview.md'
+              'design/prototype-api/backend-url-prototype-api.md': 'manage-apis/design/prototype-api/backend-url-prototype-api.md'
+              'design/create-api-product/api-product-overview.md': 'manage-apis/design/create-api-product/api-product-overview.md'
+              'design/create-api-product/create-api-product.md': 'manage-apis/design/create-api-product/create-api-product.md'
+              'design/endpoints/endpoint-types.md': 'manage-apis/design/endpoints/endpoint-types.md'
+              'design/endpoints/certificates.md': 'manage-apis/design/endpoints/certificates.md'
+              'design/lifecycle-management/api-lifecycle.md': 'manage-apis/design/lifecycle-management/api-lifecycle.md'
+              'design/lifecycle-management/customize-api-life-cycle.md': 'manage-apis/design/lifecycle-management/customize-api-life-cycle.md'
+              'design/api-versioning/create-a-new-api-version.md': 'manage-apis/design/api-versioning/create-a-new-api-version.md'
+              'design/api-versioning/enabling-notifications.md': 'manage-apis/design/api-versioning/enabling-notifications.md'
+              'design/api-documentation/add-api-documentation.md': 'manage-apis/design/api-documentation/add-api-documentation.md'
+              'design/api-collaborations/comment-on-an-api-via-the-publisher.md': 'manage-apis/design/api-collaborations/comment-on-an-api-via-the-publisher.md'
+              'design/api-policies/overview.md': 'manage-apis/design/api-policies/overview.md'
+              'design/rate-limiting/introducing-throttling-use-cases.md': 'manage-apis/design/rate-limiting/introducing-throttling-use-cases.md'
+              'design/api-monetization/monetizing-an-api.md': 'manage-apis/design/api-monetization/monetizing-an-api.md'
+              'design/advanced-topics/enable-publisher-access-control-in-api-publisher-portal.md': 'manage-apis/design/advanced-topics/enable-publisher-access-control-in-api-publisher-portal.md'
+              # Old deploy-and-publish paths
+              'deploy-and-publish/deploy-on-gateway/deploy-api/deploy-an-api.md': 'manage-apis/deploy-and-publish/deploy-on-gateway/deploy-api/deploy-an-api.md'
+              'deploy-and-publish/publish-on-dev-portal/publish-an-api.md': 'manage-apis/deploy-and-publish/publish-on-dev-portal/publish-an-api.md'
+              # Previous learn/* paths to new structure
+              'learn/design-api/create-api/create-a-rest-api.md': 'manage-apis/design/create-api/create-rest-api/create-a-rest-api.md'
+              'learn/design-api/create-api/create-a-rest-api-from-an-openapi-definition.md': 'manage-apis/design/create-api/create-rest-api/create-a-rest-api-from-an-openapi-definition.md'
+              'learn/design-api/create-api/create-a-graphql-api.md': 'manage-apis/design/create-api/create-a-graphql-api.md'
+              'learn/design-api/create-api/create-a-websocket-api.md': 'manage-apis/design/create-api/create-streaming-api/create-a-websocket-streaming-api.md'
+              'learn/design-api/create-api/expose-a-soap-service-as-a-rest-api.md': 'tutorials/expose-a-soap-service-as-a-rest-api.md'
+              'learn/design-api/create-api/test-a-rest-api.md': 'manage-apis/design/create-api/create-rest-api/test-a-rest-api.md'
+              'learn/design-api/publish-api/publish-an-api.md': 'manage-apis/deploy-and-publish/publish-on-dev-portal/publish-an-api.md'
+              # Existing redirects to 4.4.0
               'learn/consume-api/customizations/customizing-the-developer-portal/customize-api-listing/api-category-based-grouping.md': 'https://apim.docs.wso2.com/en/4.4.0/reference/customize-product/customizations/customizing-the-developer-portal/customize-api-listing/api-category-based-grouping/'
               'learn/consume-api/customizations/customizing-the-developer-portal/customize-api-listing/change-default-view.md': 'https://apim.docs.wso2.com/en/4.4.0/reference/customize-product/customizations/customizing-the-developer-portal/customize-api-listing/change-default-view/'
               'learn/consume-api/customizations/customizing-the-developer-portal/enabling-or-disabling-api-detail-tabs.md': 'https://apim.docs.wso2.com/en/4.4.0/reference/customize-product/customizations/customizing-the-developer-portal/enabling-or-disabling-api-detail-tabs/'
@@ -870,29 +921,6 @@ plugins:
               'install-and-setup/install/installing-the-product/installing-the-binary/installing-as-a-linux-service.md': 'https://apim.docs.wso2.com/en/4.4.0/install-and-setup/install/installing-the-product/installing-api-m-as-a-linux-service/'
               'install-and-setup/install/installing-the-product/installing-the-binary/installing-as-a-windows-service.md': 'https://apim.docs.wso2.com/en/4.4.0/install-and-setup/install/installing-the-product/installing-api-m-as-a-windows-service/'
               'install-and-setup/install/running-the-product.md': 'https://apim.docs.wso2.com/en/4.4.0/install-and-setup/install/installing-the-product/running-the-api-m/'
-              'design/create-api/create-a-streaming-api-from-an-asyncapi-definition.md': 'https://apim.docs.wso2.com/en/4.4.0/design/create-api/create-streaming-api/create-a-streaming-api-from-an-asyncapi-definition/'
-              'design/create-api/test-a-websub-api.md': 'https://apim.docs.wso2.com/en/4.4.0/design/create-api/create-streaming-api/'
-              'design/create-api/create-a-rest-api.md': 'https://apim.docs.wso2.com/en/4.4.0/design/create-api/create-rest-api/create-a-rest-api/'
-              'design/create-api/create-a-rest-api-from-an-openapi-definition.md': 'https://apim.docs.wso2.com/en/4.4.0/design/create-api/create-rest-api/create-a-rest-api-from-an-openapi-definition/'
-              'design/create-api/expose-a-soap-service-as-a-rest-api.md': 'https://apim.docs.wso2.com/en/4.4.0/design/create-api/create-rest-api/expose-a-soap-service-as-a-rest-api/'
-              'design/create-api/generate-rest-api-from-soap-backend.md': 'https://apim.docs.wso2.com/en/4.4.0/design/create-api/create-rest-api/generate-rest-api-from-soap-backend/'
-              'design/create-api/test-a-rest-api.md': 'https://apim.docs.wso2.com/en/4.4.0/design/create-api/create-rest-api/test-a-rest-api/'
-              'getting-started/overview.md': 'https://apim.docs.wso2.com/en/4.4.0/get-started/overview/'
-              'getting-started/basic-architecture.md': 'https://apim.docs.wso2.com/en/4.4.0/get-started/key-concepts/'
-              'getting-started/key-concepts.md': 'https://apim.docs.wso2.com/en/4.4.0/get-started/architecture/'
-              'getting-started/quick-start-guide.md': 'https://apim.docs.wso2.com/en/4.4.0/get-started/quick-start-guide/quick-start-guide/'
-              'getting-started/about-this-release.md': 'https://apim.docs.wso2.com/en/4.4.0/get-started/about-this-release/'
-              'get-started/quick-start-guide/quick-start-guide.md': 'https://apim.docs.wso2.com/en/4.4.0/get-started/api-manager-quick-start-guide/'
-              'get-started/quick-start-guide/streaming-qsg.md': 'https://apim.docs.wso2.com/en/4.4.0/get-started/streaming-quick-start-guide/'
-              'learn/design-api/create-api/create-a-rest-api.md': 'https://apim.docs.wso2.com/en/4.4.0/design/create-api/create-rest-api/create-a-rest-api/'
-              'learn/design-api/create-api/create-a-rest-api-from-an-openapi-definition.md': 'https://apim.docs.wso2.com/en/4.4.0/design/create-api/create-rest-api/create-a-rest-api-from-an-openapi-definition/'
-              'learn/design-api/create-api/create-a-graphql-api.md': 'https://apim.docs.wso2.com/en/4.4.0/design/create-api/create-a-graphql-api/'
-              'learn/design-api/create-api/create-a-websocket-api.md': 'https://apim.docs.wso2.com/en/4.4.0/design/create-api/create-streaming-api/create-a-websocket-streaming-api/'
-              'learn/design-api/create-api/expose-a-soap-service-as-a-rest-api.md': 'https://apim.docs.wso2.com/en/4.4.0/design/create-api/create-rest-api/expose-a-soap-service-as-a-rest-api/'
-              'learn/design-api/create-api/generate-rest-api-from-soap-backend.md': 'https://apim.docs.wso2.com/en/4.4.0/design/create-api/create-rest-api/generate-rest-api-from-soap-backend/'
-              'learn/design-api/create-api/test-a-rest-api.md': 'https://apim.docs.wso2.com/en/4.4.0/design/create-api/create-rest-api/test-a-rest-api/'
-              'learn/api-gateway/overview-of-the-api-gateway.md': 'https://apim.docs.wso2.com/en/4.4.0/deploy-and-publish/deploy-on-gateway/api-gateway/overview-of-the-api-gateway/'
-              'learn/api-gateway/message-mediation/changing-the-default-mediation-flow-of-api-requests.md': 'https://apim.docs.wso2.com/en/4.4.0/design/api-policies/attach-policy/'
               'learn/api-gateway/message-mediation/adding-dynamic-endpoints.md': 'https://apim.docs.wso2.com/en/4.4.0/deploy-and-publish/deploy-on-gateway/api-gateway/message-mediation/adding-dynamic-endpoints/'
               'learn/api-gateway/message-mediation/removing-specific-request-headers-from-response.md': 'https://apim.docs.wso2.com/en/4.4.0/deploy-and-publish/deploy-on-gateway/api-gateway/message-mediation/removing-specific-request-headers-from-response/'
               'learn/api-gateway/message-mediation/passing-a-custom-authorization-token-to-the-backend.md': 'https://apim.docs.wso2.com/en/4.4.0/deploy-and-publish/deploy-on-gateway/api-gateway/message-mediation/passing-a-custom-authorization-token-to-the-backend/'
@@ -913,7 +941,6 @@ plugins:
               'learn/api-gateway/scaling-the-gateway.md': 'https://apim.docs.wso2.com/en/4.4.0/deploy-and-publish/deploy-on-gateway/api-gateway/scaling-the-gateway/'
               'learn/api-gateway/api-gateways-with-dedicated-backends.md': 'https://apim.docs.wso2.com/en/4.4.0/deploy-and-publish/deploy-on-gateway/api-gateway/api-gateways-with-dedicated-backends/'
               'learn/api-gateway/mutual-ssl-between-api-gateway-and-backend.md': 'https://apim.docs.wso2.com/en/4.4.0/deploy-and-publish/deploy-on-gateway/api-gateway/mutual-ssl-between-api-gateway-and-backend/'
-              'learn/design-api/publish-api/publish-an-api.md': 'https://apim.docs.wso2.com/en/4.4.0/deploy-and-publish/publish-on-dev-portal/publish-an-api/'
               'learn/design-api/publish-api/publish-through-multiple-api-gateways.md': 'https://apim.docs.wso2.com/en/4.4.0/deploy-and-publish/deploy-on-gateway/deploy-api/deploy-through-multiple-api-gateways/'
               'learn/design-api/publish-api/publish-to-multiple-external-api-stores.md': 'https://apim.docs.wso2.com/en/4.4.0/deploy-and-publish/publish-on-dev-portal/publish-to-multiple-external-api-stores/'
               'learn/design-api/publish-api/publish-an-api-to-a-cloud-cluster-in-privatejet-mode.md': 'https://apim.docs.wso2.com/en/4.4.0/reference/k8s-operators/k8s-api-operator/'
