[4.0.0] Add moesif docs (#10431)
* Add Moesif Analytics Integration Guide and related assets

* Fix Moesif Analytics integration support version in the guide

--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -819,6 +819,7 @@ nav:
                 - Gateways:
                     - API Gateway: api-analytics/gateways/configure-synapse-gateway.md
                     #- Choreo Connect: api-analytics/gateways/configure-choreo-connect.md
+            - Moesif Analytics: api-analytics/moesif-analytics/moesif-integration-guide.md
             - On-prem Analytics: 
                 - ELK-Based Analytics Installation Guide: api-analytics/on-prem/elk-installation-guide.md
             - View API Analytics:
